plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.16'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'com.diffplug.spotless' version '8.9.0'
}

group = 'com.getit'
version = '0.0.1-SNAPSHOT'
description = 'GETIT 동아리 통합 사이트 백엔드'

// 로컬 JDK 버전과 무관하게 21로 컴파일한다. 설치돼 있지 않으면 Gradle이 자동으로 받아온다.
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

ext {
  springdocVersion = '2.8.17'
  jjwtVersion = '0.13.0'
  poiVersion = '5.5.1'
  awsSdkVersion = '2.49.3'
}

dependencies {
  // --- web / persistence / validation -------------------------------------
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-validation'

  // --- security (auth 작업에서 사용, 현재는 골격만) ---------------------------
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
  runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
  runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

  // --- refresh token 저장소 -------------------------------------------------
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'

  // --- 헬스체크 (배포 환경에서 인스턴스 상태 판별) ------------------------------
  implementation 'org.springframework.boot:spring-boot-starter-actuator'

  // --- API 문서 -------------------------------------------------------------
  implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

  // --- 엑셀 다운로드 (user, recruitment) --------------------------------------
  implementation "org.apache.poi:poi-ooxml:${poiVersion}"

  // --- 파일 저장소 (file) -----------------------------------------------------
  implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
  implementation 'software.amazon.awssdk:s3'

  // --- lombok ---------------------------------------------------------------
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  testCompileOnly 'org.projectlombok:lombok'
  testAnnotationProcessor 'org.projectlombok:lombok'

  // --- db -------------------------------------------------------------------
  runtimeOnly 'com.mysql:mysql-connector-j'
  testRuntimeOnly 'com.h2database:h2'

  // --- 스키마 마이그레이션 (dev · prod) ----------------------------------------
  // local 은 ddl-auto: update 를 쓰므로 기동해도 마이그레이션이 돌지 않는다.
  implementation 'org.flywaydb:flyway-core'
  runtimeOnly 'org.flywaydb:flyway-mysql'

  // --- test -----------------------------------------------------------------
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
  // 스키마 검증은 MySQL 이 필요하다. 기본 test 는 H2 만 쓰므로 제외한다.
  useJUnitPlatform {
    excludeTags 'schema'
  }
}

/**
 * 마이그레이션과 엔티티가 어긋나지 않는지 실제 MySQL 로 검증한다.
 * 빈 DB 에 Flyway 를 돌린 뒤 ddl-auto: validate 로 확인한다.
 *
 * 로컬 실행: docker compose up -d 후 ./gradlew schemaTest
 */
tasks.register('schemaTest', Test) {
  description = '실제 MySQL 로 마이그레이션 ↔ 엔티티 일치를 검증한다.'
  group = 'verification'

  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath

  useJUnitPlatform {
    includeTags 'schema'
  }

  systemProperty 'schema.test.url', System.getenv('SCHEMA_TEST_DB_URL')
      ?: 'jdbc:mysql://localhost:3307/getit_schema_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul'
  systemProperty 'schema.test.username', System.getenv('SCHEMA_TEST_DB_USERNAME') ?: 'getit'
  systemProperty 'schema.test.password', System.getenv('SCHEMA_TEST_DB_PASSWORD') ?: 'getit'
}

/**
 * 코드 포맷 검사. CI 의 '정적 검사' job 이 spotlessCheck 를 호출한다.
 *
 * 위반 시 ./gradlew spotlessApply 로 자동 수정한다.
 *
 * 규칙을 의도적으로 얕게 잡았다. 현재 코드가 그대로 통과하는 수준이다.
 * importOrder 나 googleJavaFormat 을 켜면 80개 파일이 한 번에 바뀌어
 * 진행 중인 브랜치가 전부 충돌한다. 강화는 작업이 적은 시점에 별도 PR 로 한다.
 */
spotless {
  java {
    target 'src/**/*.java'

    // ./gradlew build 는 포맷을 검사하지 않는다. CI 의 정적 검사 job 에서만 강제한다.
    // 개발 중에 포맷 때문에 빌드가 막히면 반복 속도가 떨어진다.
    enforceCheck = false

    removeUnusedImports()
    trimTrailingWhitespace()
    endWithNewline()
    // 탭을 공백으로 바꾼다. 들여쓰기 폭을 다시 계산하지는 않는다
    leadingTabsToSpaces(2)
  }

  format 'misc', {
    target '*.gradle', '*.md', '.gitignore', '.editorconfig', 'src/**/*.yml', '.github/**/*.yml'
    trimTrailingWhitespace()
    endWithNewline()
  }
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  options.compilerArgs << '-parameters'
}
